# starting-ragchatbot-codebase

./: CLAUDE.md  pyproject.toml
backend/: ai_generator.py  app.py  config.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_course_search_tool.py  test_rag_system.py  test_system_health.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh
