[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.0.0",
    "anthropic==0.58.2",
    "sentence-transformers==2.7.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "torch>=2.8.0",
    "python-docx>=1.2.0",
    "pypdf2>=3.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0", 
    "isort>=6.0.1",
    "mypy>=1.17.1",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*", 
    "anthropic.*",
    "uvicorn.*",
    "pytest.*",
    "tests.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501", "E402", "F401", "F811", "F841", "F541"]
exclude = [
    ".git",
    "__pycache__",
    "build", 
    "dist",
    ".venv",
    "tests",
]
